discussion/kv_engine/177335/177335_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Expiry should not be free

Change-Id: I5c25d189dc73b8b213b7687e83a3e8df7177cd3c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-11 10:47:05.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-11 11:35:51.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47742/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47742/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18922/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_document_iface.h:86:41: error: unknown type name "EngineIface" [clang-diagnostic-error]
    virtual void document_expired(const EngineIface& engine, size_t nbytes) = 0;
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18922/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_document_iface.h:86:41:
error: unknown type name "EngineIface" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18922/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21871/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21871/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20065/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2323 Test failed: `" (Expected `346522" to be less than or equal to `344064" - Unexpected fileSize for vbucket)
[2022-07-11T11:04:08.291Z] (294 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20065/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18079/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40102/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29221/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8703/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8606/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20823/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21181/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
